src/.vuepress/styles/index.styl
/**
 * Custom Styles here.
 *
 * ref：https://v1.vuepress.vuejs.org/config/#index-styl
 */

.home .hero img
  max-width 450px!important


.home-link {
    background-image: url(/logo_line.png);
    background-size: 283px;
    background-repeat: no-repeat;
    width: 299px;
}

